argocd/game/rcon-web-admin/rcon-web-admin-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rcon-internal-route
  namespace: game
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["rcon.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: rcon-web-admin
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
